objects/CRM_Help__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>FinancialForce</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
                <value>
                    <fullName>Core Processes</fullName>
                </value>
                <value>
                    <fullName>Multi Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Please input a brief description of Issue.</description>
        <label>Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Area</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Amendments</fullName>
                </value>
                <value>
                    <fullName>Output Document</fullName>
                </value>
                <value>
                    <fullName>CPQ Batch Jobs</fullName>
                </value>
                <value>
                    <fullName>Contact Roles</fullName>
                </value>
                <value>
                    <fullName>State and Country Picklist Schema</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Responsible_Team__c</fullName>
        <label>Responsible Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>SSI</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CRM Help</label>
    <nameField>
        <displayFormat>CRM-{0000}</displayFormat>
        <label>CRM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRM Help</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Issue__c</columns>
        <columns>Process__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>